# rag-eval

./: .gitignore  CLAUDE.md  PERSONA.md  README.md  docker-compose.yml
.github/workflows/: api-test.yml  sdk-npm-publish.yml  sdk-publish.yml
api/: .env.example  main.py  requirements.txt
api-worker/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
api-worker/migrations/: 0001_init.sql
api-worker/src/: index.ts  schemas.ts  types.ts
api-worker/src/lib/: auth.ts  evaluator.ts
api-worker/src/routes/: auth.ts  feedback.ts  keys.ts  stats.ts  track.ts
api/migrations/: 001_init.sql
api/models/: schemas.py
api/routers/: evaluations.py  feedback.py  keys.py  stats.py  track.py
api/services/: auth.py  database.py  evaluator.py
dashboard/: .env.local.example  package-lock.json  package.json
dashboard-spa/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
dashboard-spa/src/: App.tsx  globals.css
dashboard-spa/src/components/: ApiKeyManager.tsx  EnvSelector.tsx  EvaluationTable.tsx  FeedbackButton.tsx  Nav.tsx  ProtectedRoute.tsx  ScoreChart.tsx  StatsCards.tsx
dashboard-spa/src/lib/: api.ts  auth-context.tsx  env-context.tsx  types.ts
dashboard-spa/src/pages/: EvaluationDetail.tsx  (+5 more)
dashboard/src/: middleware.ts
sdk/: README.md  pyproject.toml
sdk-npm/: package-lock.json  package.json  tsconfig.json
sdk-npm/src/: autorag.ts  client.ts  index.ts  types.ts
sdk-npm/tests/: autorag.test.ts  client.test.ts
sdk/rag_eval/: __init__.py  tracker.py
(+19 files in other folders)
