[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rageval-sdk"
version = "0.2.0"
description = "RAG evaluation SDK — RAGの回答品質を3行で計測"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["rag", "llm", "evaluation", "observability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/A-1ro/rag-eval"
Documentation = "https://github.com/A-1ro/rag-eval#readme"
Issues = "https://github.com/A-1ro/rag-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["rag_eval"]
